<?xml version="1.0"?>
<package>
  <name>beginner_tutorials</name>
  <version>0.0.0</version>
  <description>The best package Maddie and Rachel have literally ever made.</description>

  <maintainer email="rachel.boy@gmail.com">rboy</maintainer>
  <maintainer email="madeline.perry@students.olin.edu">mperry</maintainer>

  <license>BSD</license>


  <url type="website">http://wiki.ros.org/beginner_tutorials</url>


  <author email="rachel.boy@gmail.com">rboy</author>
  <author email="madeline.perry@students.olin.edu">mperry</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
